--- a/projects/project 3 try 2/app/src/main/res/layout/activity_main.xml
+++ b/projects/project 3 try 2/app/src/main/res/layout/activity_main.xml
@@ -2,42 +2,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
+    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
     tools:context="com.kinne.jack.jkp3v2.MainActivity">
 
     <Button
         android:id="@+id/takePhotoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_margin="8dp"
+        android:background="@drawable/rounded_gold"
+        android:backgroundTint="@android:color/holo_blue_dark"
         android:text="Take Picture" />
+
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/takePhotoButton"
-        android:scaleType="centerCrop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/takePhotoButton"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/black"
+        android:contentDescription="Default is sheep"
         app:srcCompat="@drawable/ra2" />
 
-    <Button
-        android:id="@+id/editPhotoButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:text="Edit Photo" />
 
-    <TextView
-        android:id="@+id/textView2"
+    <Button
+        android:id="@+id/button_detect"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/takePhotoButton"
-        android:layout_alignBottom="@+id/takePhotoButton"
-        android:layout_toEndOf="@+id/takePhotoButton"
-        android:text="Take a pic, then Edit!" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="8dp"
+        android:background="@drawable/rounded_gold"
+        android:backgroundTint="@android:color/holo_blue_dark"
+        android:text="Google Vision" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="181dp" />
 
 </RelativeLayout>
