fixed crash on the async call by adding a UI thread!
added some limited functionality to the ListResults.java

--- a/projects/project 3 try 2/app/src/main/res/layout/activity_list_results.xml
+++ b/projects/project 3 try 2/app/src/main/res/layout/activity_list_results.xml
@@ -32,7 +32,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
         android:background="@android:color/black"
-        android:text="List of things:"
+        android:text="Google thought this was:"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="30dp" />
